| Bug #3460 | Invalid bug reporting URL in "make test" output | ||
|---|---|---|---|
| Submitted: | 13 Apr 2004 10:43 | Modified: | 28 Apr 2004 10:50 |
| Reporter: | Bryn Dyment | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Installing | Severity: | S3 (Non-critical) |
| Version: | 4.0.18 | OS: | FreeBSD (FreeBSD) |
| Assigned to: | Michael Widenius | CPU Architecture: | Any |
[13 Apr 2004 10:43]
Bryn Dyment
[27 Apr 2004 15:57]
Dean Ellis
Verified; mysql-test-run/mysql-test-run.sh reports the invalid URL. Thank you.
[28 Apr 2004 10:50]
Michael Widenius
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Fix will be in 4.0.19
